# wavespectra

./: build.py  pyproject.toml  setup.py
requirements/: requirements_doc.txt
wavespectra/core/: watershed.py
